# mnemra-core

./: .gitignore  404.html  CONTRIBUTING.md  Cargo.toml  README.md  deny.toml  glossary.html  index.html  intro.html  justfile  llms-full.txt  llms.txt  print.html  rust-toolchain.toml  searcher-c2a407aa.js  searchindex-06eb3bb0.js  searchindex-45962466.js  searchindex-5e1df9b1.js  searchindex-726d6466.js  searchindex-728d49ac.js  searchindex-8e7de588.js  searchindex-95ce4fb3.js  searchindex-9f0fba51.js  searchindex-ab333741.js  searchindex-ad3fea29.js  searchindex-b013309e.js  searchindex-f448210e.js  searchindex-f8c1a881.js  toc-0fc6f618.js  toc-50d79c7c.js  toc-5d081ac2.js  toc.html
.claude/commands/: docs-translate.md
.github/workflows/: ci.yml  docs.yml
adrs/: DEFAULTS.html  index.html  template.html
architecture/: overview.html
artifacts/mnemra-echo/: mnemra_echo.wasm
cmd/mnemra/: Cargo.toml  logging.rs  main.rs
cmd/mnemra/cmd/: init.rs  mod.rs
cmd/sign-ceremony/: Cargo.toml  ceremony.rs  main.rs
cmd/sign-ceremony/tests/: round_trip.rs
crates/mnemra-host/: Cargo.toml
crates/mnemra-host/src/: lib.rs
crates/mnemra-host/src/auth/: mod.rs  token.rs
crates/mnemra-host/src/builtins/: mod.rs
crates/mnemra-host/src/projection/: fixture_projection.rs  mod.rs  worker.rs
crates/mnemra-host/src/schema/: artifact_table.rs  init.rs  mod.rs
crates/mnemra-host/src/schema/migrations/: mod.rs
crates/mnemra-host/src/storage/: mod.rs
crates/mnemra-host/src/storage/postgres/: engine.rs  mod.rs
crates/mnemra-host/tests/: admin_token.rs  admin_token_behavior.rs  artifact_machinery.rs  postgres_engine.rs  schema_init.rs  storage_contract_postgres.rs
crates/mnemra-host/tests/common/: mod.rs
docs/: book.toml
docs/_published/: .translation-manifest.json  llms-full.txt  llms.txt
docs/intent/: artifact-list-paging-frame.md  artifact-list-paging.md  ci-flake-tier1-serialize-frame.md  ci-flake-tier1-serialize.md  ci-flake-tier2-shared-engine-frame.md  ci-flake-tier2-shared-engine.md  coordination-wedge-frame.md  coordination-wedge.md  ingestion-pipeline-frame.md  ingestion-pipeline.md  mnemra-core.md  plugin-distribution-frame.md  plugin-distribution.md  postmaster-ownership-marker-frame.md  postmaster-ownership-marker.md  reporting-engine-frame.md  reporting-engine.md  retrieval-cluster-frame.md  retrieval-cluster.md  signing-to-runnable-frame.md  signing-to-runnable.md  strangler-program-frame.md  strangler-program.md
docs/plans/: 2026-06-12-v0-substrate-ac-audit.md  2026-06-12-v0-substrate-plan.md  2026-06-20-task23-v0-execution-path-plan.md
docs/prompts/: explain-pass.md  strip-pass.md
docs/runbooks/: signing-ceremony.md
docs/specs/: 2026-05-07-mdbook-scaffolding.md  2026-05-21-llms-txt-generation-mvp.md  2026-05-21-mdbook-human-surface-wiring.md  2026-05-21-translation-pipeline.md  2026-06-30-signing-to-runnable.md  (+23 more)
intent/: mnemra-core-frame.html  mnemra-core.html
libs/mnemra-host/: Cargo.toml  abi.rs  auth.rs  builtins.rs  config.rs  health.rs  mnemra_host.rs  net.rs  schema.rs  signing.rs  startup.rs
libs/mnemra-host/abi/: host_fns.rs
libs/mnemra-host/auth/: permissions.rs  resolve.rs  role.rs  token.rs  workspace_ctx.rs
libs/mnemra-host/builtins/: actors.rs  agents.rs  authentication.rs  permissions.rs  projects.rs  sessions.rs  users.rs  workspaces.rs
libs/mnemra-host/config/: llm_key.rs
libs/mnemra-host/coordination/: audit.rs  leases.rs  message_types.rs  messages.rs  mod.rs  resource_id.rs  session_plane.rs  write_path.rs
libs/mnemra-host/mcp/: dispatch.rs  errors.rs  mod.rs  server.rs
libs/mnemra-host/net/: hostname_allowlist.rs
libs/mnemra-host/plugin/: allowlist.rs  component.rs  epoch_thread.rs  limits.rs  manifest.rs  mod.rs  output.rs  pool.rs  runtime.rs  sql_observe.rs  trap_recovery.rs
libs/mnemra-host/projection/: refresh_queue.rs  worker.rs
libs/mnemra-host/schema/: artifact_table.rs  history_trigger.rs  init.rs
libs/mnemra-host/signing/: build_gate.rs  root_material.rs  verify.rs
libs/mnemra-host/startup/: file_mode_check.rs  pool_population.rs
libs/mnemra-host/storage/: memory.rs  postgres.rs
libs/mnemra-host/storage/postgres/: engine.rs
libs/mnemra-host/tests/: abi_contract.rs  actors_entity.rs  admin_token.rs  admin_token_behavior.rs  artifact_list_paging.rs  artifact_list_paging_whitebox.rs  artifact_machinery.rs  build_gate.rs  ci_reap_baseline.rs  content_hash_binding.rs  content_schema.rs  coordination_failclosed.rs  coordination_leases.rs  coordination_message_types.rs  coordination_messages.rs  coordination_schema.rs  coordination_session_plane.rs  health_listener.rs  identity_builtins.rs  invoke_health_gate.rs  lint_workspace_clause.rs  llm_key_allowlist.rs  manifest_load.rs  mcp_feature_guard.rs  mcp_server.rs  mcp_slice1_e2e.rs  mcp_verb_gate.rs  no_test_seams.rs  permissions.rs  plugin_output_validation.rs  postgres_engine.rs  resource_limits.rs  schema_init.rs  signing_chain.rs  smoke_e2e.rs  startup_population.rs  startup_run_full.rs  startup_run_ordering.rs  storage_contract.rs  storage_contract_postgres.rs  (+2 more)
libs/mnemra-host/tests/common/: paging_harness.rs  shared_engine.rs  slice1_harness.rs  startup_probe.rs
libs/mnemra-host/tests/ui/no_test_seams/: await_tick_confirmation_reachable.rs  await_tick_confirmation_reachable.stderr  can_invoke_epoch_seam_reachable.rs  can_invoke_epoch_seam_reachable.stderr  coordination_fault_reachable.rs  coordination_fault_reachable.stderr  inject_death_reachable.rs  inject_death_reachable.stderr  poison_health_lock_reachable.rs  poison_health_lock_reachable.stderr  run_config_injected_failure_reachable.rs  run_config_injected_failure_reachable.stderr  tick_confirmed_since_restart_reachable.rs  tick_confirmed_since_restart_reachable.stderr
scripts/: ci-reap.sh  docs-llms.py  docs-translate.py  flake-runner.sh  mdbook-strip-frontmatter.py
specs/: index.html
tests/: test_docs_llms.py  test_docs_translate.py  test_mdbook_strip_frontmatter.py
tools/mdbook-d2/: Cargo.toml  main.rs
tools/mdbook-d2/tests/: integration.rs
wit/: echo.wit  host.wit
(+84 files in other folders)
