[workspace]
resolver = "3"
members = [
    "crates/mnemra-host",
    "cmd/mnemra",
    "plugins/mnemra-echo",
]
default-members = [
    "cmd/mnemra",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Peter Manahan"]
license = "MIT"

[workspace.dependencies]
wit-bindgen = "0.57"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
