[workspace]
resolver = "3"
members = [
    "libs/mnemra-host",
    "cmd/mnemra",
    "plugins/mnemra-echo",
]
default-members = [
    "cmd/mnemra",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["Peter Manahan"]
license = "Apache-2.0"

[workspace.dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
wit-bindgen = "0.57"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
