[package]
name = "mnemra"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mnemra"
path = "main.rs"

[dependencies]
mnemra-host = { path = "../../libs/mnemra-host" }
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
