[package]
name = "mnemra-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "mnemra runtime host — startup and lifecycle coordination"

[dependencies]
async-trait = "0.1.89"
postgresql_embedded = { version = "0.20.4", features = ["tokio"] }
postgresql_extensions = { version = "0.20.4", features = ["tokio", "portal-corp"] }
# A-19: sqlx over tokio-postgres — Task 7 migrations use `sqlx migrate run`;
# macro-heavy compile cost (~44s test profile) accepted for that tooling value.
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio"] }

[dev-dependencies]
anyhow = "1.0.102"
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
wit-parser = "0.247"
