[package]
name = "mnemra-host"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "mnemra runtime host — startup and lifecycle coordination"

[lib]
path = "./mnemra_host.rs"

# Coordination token for task #1702 / Task 23 MCP server security gate.
# Declaration only — no source is gated behind this feature in the default build.
# Green phase (Forge) will add #[cfg(feature = "test-hooks")] to the 5
# EpochTickThread test-seam methods and gate resource_limits.rs tests.
[features]
test-hooks = []

[dependencies]
async-trait = "0.1.89"
# Task 23: MCP server SDK — server+macros+transport-io features (no http/streamable-http;
# R-0010-e). runtime dep so the ServerHandler impl can be compiled into the host.
rmcp = { workspace = true }
base64 = "0.22.1"
blake3 = "1.8.5"
chrono = { version = "0.4.45", features = ["serde"] }
# Task 17: Ed25519 signature verification for plugin signing chain (R-0005-a/b/d/h).
# Promoted from dev-dep (green phase); runtime verify path needs it at load time.
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
libc = "0.2.186"
postgresql_embedded = { version = "0.20.4", features = ["tokio"] }
postgresql_extensions = { version = "0.20.4", features = ["tokio", "portal-corp"] }
rand = "0.10.1"
sha2 = "0.11.0"
# A-19: sqlx over tokio-postgres — Task 7 migrations use `sqlx migrate run`;
# macro-heavy compile cost (~44s test profile) accepted for that tooling value.
sqlx = { version = "0.9.0", features = ["postgres", "runtime-tokio", "uuid", "chrono"] }
subtle = "2.6.1"
# Task 17: TOML parsing for manifest field extraction in signing verification.
# Used only for field reads (name/version/core/sig_bytes); canonical signed bytes
# are extracted by byte-string stripping, NOT by re-serializing (canonicalization
# contract requires exact original byte layout).
toml = "0.8"
# Task 9: projection/worker.rs uses tokio::spawn + JoinHandle in library code.
# Features: rt (spawn), sync (Mutex in DrainHandle).
tokio = { version = "1.52.3", features = ["rt", "sync"] }
# Task 21: Wasmtime WASM runtime — fuel metering, epoch interruption, memory limits.
# R-0007-i: version PINNED (exact, no open caret) — major/minor upgrade requires
# explicit plan AC.
wasmtime = { version = "=45.0.2", features = ["cranelift", "component-model"] }
# Task 21: serde + serde_derive for manifest TOML deserialization.
# Replaces manual toml::Value traversal with typed structs (cleaner + exhaustive).
serde = { version = "1.0", features = ["derive"] }
tracing = { workspace = true }
uuid = { version = "1.23.3", features = ["v4", "v5"] }

[dev-dependencies]
anyhow = "1.0.102"
# Task 23: rmcp client feature for in-process test transport (serve_client, Peer::call_tool).
# The runtime rmcp dep above uses server+macros+transport-io only (R-0010-e compliance);
# the client feature is dev-only so it does not activate in production builds.
rmcp = { workspace = true, features = ["client"] }
# Task 23: serde_json for mcp_feature_guard.rs (cargo metadata parse) and
# test argument construction.
serde_json = "1.0"
ed25519-dalek = { version = "2.2.0", features = ["rand_core"] }
quote = "1.0.45"
syn = { version = "2.0.117", features = ["full", "extra-traits"] }
tempfile = "3.27.0"
tokio = { version = "1.52.3", features = ["rt", "macros", "rt-multi-thread"] }
trybuild = "1.0.116"
wit-parser = "0.247"
