[package]
name = "mdbook-d2"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "mdbook-d2"
path = "main.rs"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
assert_cmd = "2"
tempfile = "3"
predicates = "3"
